--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
     "rxjs": "~6.6.3",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "tslib": "^1.9.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.29",
@@ -45,8 +46,7 @@
     "ng-packagr": "^5.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": "^0.37.0",
-    "tslib": "^1.9.0",
+    "tsickle": "^0.38.1",
     "tslint": "~5.11.0",
     "typescript": "~3.5.3"
   }
