--- a/projects/ngx-inok-player/package.json
+++ b/projects/ngx-inok-player/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inok/ngx-inok-player",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Audio Player for Angular",
   "repository": "git@github.com:nchizhov/ngx-inok-player.git",
   "keywords": [
@@ -14,8 +14,11 @@
     "url": "https://github.com/nchizhov/ngx-inok-player/issues"
   },
   "peerDependencies": {
-    "@angular/common": ">=5.0.0 <9.0.0",
-    "@angular/core": ">=5.0.0 <9.0.0",
-    "file-saver": "^2.0.1"
+    "@angular/common": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "file-saver": "^2.0.5"
+  },
+  "dependencies": {
+    "tslib": "^1.10.0"
   }
 }
