--- a/projects/ngx-inok-player/tsconfig.lib.json
+++ b/projects/ngx-inok-player/tsconfig.lib.json
@@ -2,15 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
-    "target": "es2015",
     "declarationMap": true,
     "declaration": true,
     "inlineSources": true,
-    "types": [],
-    "lib": [
-      "dom",
-      "es2018"
-    ]
+    "types": []
   },
   "exclude": [
     "src/test.ts",
